# FABRIC

./: .gitignore  LICENSE  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/crud/: account.py  baby.py  interaction.py  role.py  user.py
backend/app/db/: create_db.py  database.py  enum_class.py  models.py
backend/app/public/avatar/: readme.txt
backend/app/routers/: baby.py  user.py
backend/app/schemas/: account.py  baby.py  interaction.py  role.py  user.py
backend/app/static/: 330A1234F676BC5D748EC51BBD9DE74E.txt
backend/app/utils/: account.py  auth.py  user.py
frontend/: .gitignore  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/apis/: api_base_url.js  baby.js  user.js
frontend/components/: footer_banner.vue
frontend/components/account/: settings_banner_basic.vue  settings_banner_switch.vue
frontend/components/baby_detail_list/: baby_info_cell.vue
frontend/components/babyinfo/: button_with_pic.vue  clock.vue  record_panel.vue  record_panel_item.vue
frontend/components/knowledge/: news.vue  slider_with_caption.vue  title_btn.vue
frontend/components/login/: button_with_icon.vue  input.vue  l_panel.vue  s_panel.vue  select.vue
frontend/components/record/: baby_checkbox.vue  datepicker.vue  (+2 more)
frontend/pages/: account.vue  baby_detail_list.vue  babyinfo.vue  create_baby.vue  create_baby_deprecate.vue  knowledge.vue  login.vue  record.vue  statistic.vue  welcome.vue
frontend/stores/: baby.js  user.js
nginx/: nginx.conf
script/: crop.py  resize.py
(+4 files in other folders)
