[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FABRIC_backend"
authors = ["pony <pony8674312@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
fastapi = "0.102.0"
requests = "^2.31.0"
sqlalchemy = "^2.0.20"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.7"
sqlalchemy-utils = "^0.41.1"
email-validator = "^2.0.0.post2"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
